--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mime": "^3.0.0",
     "node-fetch": "^2.6.9",
     "node-webpmux": "3.1.7",
-    "puppeteer": "^24.31.0"
+    "puppeteer": "^24.31.0",
+    "@pedroslopez/moduleraid": "^5.0.2"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.12",
